# ojp-meta-service

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: dark-mode.css  documentation_sbb.md  index.html  ojp_insomnia.json  openapi.yml
src/: main.rs
src/parser/: mod.rs
src/requests/: mod.rs
src/tests/: mod.rs
src/types/: mod.rs
