[package]
name = "ojp-meta-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.12"
roxmltree = "0.15.0"
chrono = "0.4.22"
dotenvy_macro = "0.15.1"